[package]
name = "rust-client"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.18"
futures-util = "0.3"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.3", features = ["v4"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
bytes = "1.4"
http = "0.2"

[build-dependencies]
prost-build = "0.11"
